--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".activity.StatementInfoActivity"></activity>
 
-        <uses-library
-            android:name="org.apache.http.legacy"
-            android:required="false" />
+
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -50,7 +48,7 @@
             android:parentActivityName=".activity.HomeActivity" />
         <activity
             android:name=".activity.HomeActivity"
-            android:label="@string/title_activity_home">
+            android:label="MyHome">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
