--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.vicmikhailau:MaskedEditText:2.0.4'
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
-
-
+    implementation 'de.hdodenhof:circleimageview:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
