--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activity.MyStat"></activity>
         <activity android:name=".activity.ImageActivity" />
         <activity android:name=".activity.StatementInfoActivity" />
         <!--
