--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,15 +22,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MyStat"
+        <activity android:name=".activity.NotSettingActivity"></activity>
+        <activity
+            android:name=".activity.MyStat"
             android:configChanges="orientation"
-            android:screenOrientation="portrait">
-
-        </activity>
-
-        <activity android:name=".activity.ImageActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activity.ImageActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity android:name=".activity.StatementInfoActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -46,25 +46,24 @@
 
         <activity
             android:name=".activity.AddActivity"
-            android:parentActivityName=".activity.HomeActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"/>
+            android:parentActivityName=".activity.HomeActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.UserInfoActivity"
-            android:parentActivityName=".activity.HomeActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"/>
+            android:parentActivityName=".activity.HomeActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.EmailPasswordActivity"
-            android:parentActivityName=".activity.HomeActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"/>
+            android:parentActivityName=".activity.HomeActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.HomeActivity"
-            android:label="MyHome"
             android:configChanges="orientation"
+            android:label="MyHome"
             android:screenOrientation="portrait">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
